--- a/contents/accessible/knowAbout.tex
+++ b/contents/accessible/knowAbout.tex
@@ -1,16 +1,14 @@
 \subsection{Know about}
 
-The user will need to know that he has this resource and can use it because although we optimize the represantation of the
-data set and we offer it to users, this will not be useful if users are not aware that it exists.
+No matter how optimized the representation of the data is, if users are not aware of the existence of the resource, they can not use it.
 
 \subsubsection{How to solve it} 
-The best way is to advertise the product in the right environment and environment.
+The best way is to advertise the product in the appropriate environments.
 \subsubsection{How we solve it. Aire Guru} 
-Our tool is implemented for the city of Malaga, so we are currently working to give it to
-know in this city.
+Our tool is implemented for the city of Malaga, so we are currently working to publicize it in this city.
 It is currently available in the open data portal in the app tab \footnote {\url {https://datosabiertos.malaga.eu/aplicaciones}} \\
-Participated in the first open data reuse contest organized by the Malaga City Council \footnote {\url {https://tinyurl.com/yx9wzutj}}
-being finalist in the category of web page.
+Aire Guru participated in the first open data reuse contest organized by the Malaga City Council \footnote {\url {https://tinyurl.com/yx9wzutj}}
+and was a finalist in the web page category.
 
 
 \begin{figure}[ht]
@@ -25,6 +23,6 @@ being finalist in the category of web page.
 \elsparagraph{Evaluation}  
 \begin{itemize}
     \done It is currently published in the open data portal of the City of Malaga.
-\crossed More work should be done on the advertising of the platform and make it known.
+\crossed More work should be done on advertising the platform and making it known.
 \end{itemize}
 \newpage
