--- a/contents/accessible/model.tex
+++ b/contents/accessible/model.tex
@@ -1,8 +1,6 @@
 \subsection{Modelo}
 
-Recall that the main objective of access to data is to obtain knowledge. You have to have in
-Account that the data by themselves, do not have any value, since they lack sense, once integrated in a context,
-will provide us with information, and by processing and analyzing this information, we will obtain the knowledge. \\
+Recall that the main objective of accessing the data is to obtain knowledge, to understand and make sense of it. Of course, pure data by itself has no value until we can understand it and apply it. We must contextualize, process, and analyze the information to gain useful knowledge. \\
     
 \begin{figure}[ht]
     \centering 
@@ -17,9 +15,7 @@ will provide us with information, and by processing and analyzing this informati
       \caption{Diagrama. De datos a conocimiento}
     \end{figure}
  
-    In order to obtain this knowledge of the data, it is necessary that the user correctly interprets the data, not
-    simply that they mean the values and the units, but they represent. For the
-    that the user must have knowledge in the matter or perform a research task, which allows
+    In order to obtain this knowledge, the user must correctly interpret the data. It's not enough to know what the values and units individually represent, but what they mean in the big picture. For that the user must already have expertise in the area, or must engage in further research allowing them to understand the data that has been extracted.
     understand the data extracted.
     
     In order to build a system that makes data accessible, it is essential to design a model to specify the
@@ -33,7 +29,7 @@ Study the objective sought and resort to the help of experts if necessary to acq
 on the subject. Design a model that provides the information we are looking for.
 
 \subsubsection{How we solve it. Aire Guru} 
-Air Guru aims to increase the awareness of the level of pollution that surrounds us, for it uses a measure called
+Aire Guru aims to increase the awareness of the level of pollution that surrounds us. To do this, it uses a measure called
 the air quality index (AQI), specifically the European air quality index (EAQI).
 
 
@@ -47,17 +43,15 @@ the air quality index (AQI), specifically the European air quality index (EAQI).
 It shows the AQI in the whole city of Malaga by zones, both the general and the AQI of each of the agents
 contaminants in a more disaggregated form from September 2018 to the present. It also shows the evolution
 of these for days, months and years.
-It is capable of making a discrimination of the set of most relevant polluting agents by medical conditions.
-As an innovative feature, it shows the exhibition at a particular level by hour, day, month, year and the function of
-informative glossary.
+It is capable of creating a set of the most relevant polluting agents by medical condition. An innovative feature is the capacity to display levels of any particular agent by hour, day, month, or year. 
 
 \elsparagraph{Evaluation}  
 
 \begin{itemize}
-\done The information is focused on an objective, informing the user of the level of pollution that surrounds it in real time
-and in the past
-\done The information follows a logical thread. Storytelling
-\done The web offers information, not just data
+\done The information is focused on an objective, informing the user of the level of pollution that surrounds them, both  in real time
+and in the past.
+\done The information follows a logical thread; it tells a story.
+\done The web offers understandabl, useable information, not just raw data.
 \end{itemize}
 
 \newpage
