--- a/contents/relevant.tex
+++ b/contents/relevant.tex
@@ -1,11 +1,9 @@
 \newpage
 \section{Relevant}
  
+Gathering as much unfiltered information as possible is not helpful to the user. What is helpful, is showing the user what is relevant and neccessary for their purposes, so that they can immediately interpret the data.\\
 
-A good representation of the data does not consist in presenting all of them so that the user has as much information as possible,
-It consists in showing you the necessary data so that you can make a direct reading of the situation.\\
-
-In this section we will see the refining of the data to offer the user a relevant and quality information.
+In this section we will explore refining the data to offer the user relevant and quality targeted information.
 
 \input{contents/relevant/model.tex}
 \input{contents/relevant/dataSetQuality.tex}
