--- a/contents/relevant/userOriented.tex
+++ b/contents/relevant/userOriented.tex
@@ -1,31 +1,30 @@
 \subsection{Focus on the user}
 A large part of the objective outlined in section 3.1, design, is defined by the service that we want to offer
-to the user, since this is our final client and to whom we intend to help. \\
+to the user. To assist the user, (our client), is our primary purpose. \\
 
 
-We must be aware of the needs that users show in combination with market deficiencies since
-It will help us to know what the demand or the hole that is not covered may be.
+We must be aware of the needs of users in order to meet their demands, as well as being aware of deficiencies in the market, so we can cover any 'holes'.
+We should cater for all audiences equally 
+
 Whether our target audience is unique, that is, take all types of users equally, considering the
 average user, as for a characteristic user, we should know the homogeneous characteristics of our group.
 
 Therefore we need a current study on the psychological, social and economic level of the target group, to discover, not only
-the needs, but also the wishes, that you would like to have and your demands, that you want.
+their needs, but also their wishes.
 
-Once the users have access to the data as we provide them, it is important to have a feedback,
-It would be ideal to be able to perform an analysis of user behavior to see their guidelines regarding the data obtained.
+Once the users have access to the data we provide, it is important to have a feedback process.
+It would be ideal to be able to perform an analysis of user behavior, to see their guidelines regarding the data obtained.
 \subsubsection{How to solve it} 
-Define what type of users is intended. Study both its characteristics and the situation of the
+Define what type of user is intended. Study both their characteristics and the situation of the
 market.
-Use a mechanism that helps us obtain a feedback, either by a system of points, test or
-an automatic mechanism that allows knowing the behavior of the user. We can also choose the combination of both
-options
+Use a mechanism that helps us obtain feedback, either by a system of points, test or
+an automatic mechanism that allows tracking the behavior of the user. We can also choose the combination of both
+options.
 
 \subsubsection{How we solve it. Aire Guru} 
-Air Guru is aimed at the entire population, so we will take into account when implementing it that the information should
-show in a simple way, in addition to complete. In addition, we pay special attention to users who may have a
-disease or medical condition influenced by air pollution.
-During the market study, we realized that many of them offered air pollution in real time, but
-We could see the following deficiencies:
+Air Guru is aimed at the general population, therefore it's appropriate to present complete information in simple way. In addition, we pay special attention to users who may have a
+disease or medical condition, caused or affected by, air pollution.
+During the market study, we realized that many existing tools offered information about air pollution in real time, but we could see the following deficiencies:
 \begin{itemize}
     \item Obsolete measurements. Measurements need to be taken regularly, since there can be huge differences
     between pollution levels at different times of the day.
@@ -41,9 +40,8 @@ We could see the following deficiencies:
     \item Sin informacion dedicada por condicion medica.
 \end{itemize}
 
-Once implemented, we tested the tool with 14 users. Our tool integrates Google Analytis that allows us to know the
-user behavior, how many pages they access, how long and how long they stay in it. Also, after the test,
-A survey was conducted to measure not only the level of satisfaction, but also to verify the utility and if it had achieved the objective.
+Once implemented, we tested the tool with 14 users. Our tool integrates Google Analytics that allow us to evaluate
+user behavior, how many pages they access, and how long they stay on them. Also, after the test, we conducted a survey to measure not only the level of satisfaction with the tool, but also to verify the utility and if the user was able to achieve their objective.
 \begin{figure}[ht]
     \centering
    \subfigure[Aire Guru Form]
@@ -58,9 +56,8 @@ A survey was conducted to measure not only the level of satisfaction, but also t
 \elsparagraph{Evaluation}  
 \begin{itemize}
     \done The market study made us clearly see the shortcomings that exist in current applications.
-    \done The survey gave us very positive evaluations regarding the use, understanding and information reported.
-    \done Users were told that thanks to Aire Guru they had discovered that they had a medical condition that could be affected by
-         air pollution
+    \done The survey gave us very positive evaluations regarding the useability, interpretability, and depth of information reported.
+    \done Thanks to Aire Guru, users were informed about medical conditions with the potential to affect them personally, that could be caused or made worse by air pollution.
 
 \end{itemize}
  
