--- a/contents/accessible/convenience.tex
+++ b/contents/accessible/convenience.tex
@@ -25,8 +25,8 @@ cleans and stores it in a MongoDB database. That is to say, Aire Guru implements
 Thanks to this infrastructure, the user is able to visualize the evolution of pollutants since 2018. The user can also track their personal exposure
  to these pollutants over the same period of time.
 
-In addition, with the automation of processes, the user is able to visualize the pollution in real time of the city of Malaga and specifically in the point
-in which it is found. \\
+In addition, this automation allows the user to visualize the pollution in the city of Malaga in real time, and see specifically the location where it is 
+occurring. \\
 
 \begin{figure}[ht]
     \centering
@@ -34,7 +34,7 @@ in which it is found. \\
     \caption{Arquitecture Aire Guru}
 \end{figure}
 
-Through a web interface, it shows the data to the users. \\
+The data to the users through a web interface. \\
 
 \begin{figure}[ht]
     \centering
@@ -42,21 +42,19 @@ Through a web interface, it shows the data to the users. \\
     \caption{Aire Guru. Web Interface}
 \end{figure}
 
-To guarantee the reach of the majority of the population, Aire Guru is available at the web addresses https://www.aire.guru and https://www.airquality.guru.
-Use SSL that guarantees the encryption of data through the network, more and more browsers try to protect users and
-They only show pages that use a secure method.
+To enable access by the majority of the population, Aire Guru is available at the web addresses https://www.aire.guru and https://www.airquality.guru.
+We use SSL that guarantees the encryption of data through the network, as more and more browsers try to protect users by only showing pages that use a secure method.
 
 As we commented previously, all users can see the basic information without having to provide any data or identify themselves, without the need to
-perform no download or installation and today, almost everyone is familiar with web browsing.
-When we do not force the user to perform extra actions, such as a download or identification, the user will feel less forced to give us an opportunity.
+perform downloads or installations. Today, almost everyone is familiar with web browsing, but we do not want to deter people from using our site by requiring them to sign in or install extra software. 
 
 
 \elsparagraph{Evaluation}  
 \begin{itemize}
-\done The data necessary for our model have been extracted from the raw data.
-\done Infrastructure. It implements all the necessary architecture of storage, processing and visualization so that the user only has to consult
+\done The data necessary for our model has been extracted from the raw data.
+\done Infrastructure. Aire Guru implements all the necessary architecture of storage, processing and visualization so that the user only has to consult
 the data.
 \done It automates the processes of data collection and the necessary calculations to show the information to the user.
-\done Offering users a free web page, facilitates the user to access information directly
+\done It offers users a free web page, and facilitates the users direct access to information.
 \end{itemize}
 
